--- a/solomon/bower.json
+++ b/solomon/bower.json
@@ -18,9 +18,12 @@
   "dependencies": {
     "angular": "~1.3.6",
     "angular-ui-router": "~0.2.13",
-    "ui-bootstrap": "~0.12.0",
     "bootstrap": "~3.3.1",
-    "socket.io": "~1.2.1",
-    "angular-socket-io": "~0.7.0"
+    "angular-socket-io": "~0.7.0",
+    "angular-bootstrap": "~0.12.0",
+    "socket.io-client": "~1.2.1"
+  },
+  "resolutions": {
+    "angular": "^1.2.6"
   }
 }
