--- a/solomon/package.json
+++ b/solomon/package.json
@@ -12,16 +12,23 @@
     "del": "^1.1.0",
     "event-stream": "^3.1.7",
     "gulp": "^3.8.10",
+    "gulp-angular-filesort": "^1.0.4",
+    "gulp-angular-templatecache": "^1.5.0",
     "gulp-concat": "^2.4.2",
+    "gulp-connect": "^2.2.0",
+    "gulp-htmlmin": "^0.2.0",
     "gulp-inject": "^1.0.2",
     "gulp-less": "^2.0.1",
     "gulp-livereload": "^2.1.1",
     "gulp-load-plugins": "^0.8.0",
     "gulp-ng-annotate": "^0.4.2",
+    "gulp-size": "^1.1.0",
     "gulp-sourcemaps": "^1.2.8",
     "gulp-uglify": "^1.0.2",
     "gulp-watch": "^3.0.0",
     "gulp-wrap": "^0.5.0",
+    "gulp-wrap-js": "^0.2.0",
+    "run-sequence": "^1.0.2",
     "wiredep": "^2.2.0"
   }
 }
