--- a/magic-lamp/package.json
+++ b/magic-lamp/package.json
@@ -13,16 +13,25 @@
   "dependencies": {
     "bluebird": "^2.3.11",
     "body-parser": "~1.8.1",
+    "compression": "^1.2.2",
     "cookie-parser": "~1.3.3",
     "cors": "^2.5.2",
     "debug": "~2.0.0",
     "express": "~4.9.0",
+    "getmod": "^0.1.1",
     "jade": "~1.6.0",
     "mongoose": "^3.8.20",
     "morgan": "~1.3.0",
     "node-uuid": "^1.4.2",
+    "passport": "^0.2.1",
+    "passport-http": "^0.2.2",
+    "passport-local": "^1.0.0",
+    "passport-localapikey": "0.0.3",
     "serve-favicon": "~2.1.3",
     "socket.io": "^1.2.1",
     "stylus": "0.42.3"
+  },
+  "devDependencies": {
+    "passport-localapikey-update": "^0.4.2"
   }
 }
