--- a/qarin/package.json
+++ b/qarin/package.json
@@ -13,6 +13,7 @@
     "event-stream": "^3.1.7",
     "gulp": "^3.8.10",
     "gulp-concat": "^2.4.2",
+    "gulp-connect": "^2.2.0",
     "gulp-less": "^2.0.1",
     "gulp-livereload": "^2.1.1",
     "gulp-ng-annotate": "^0.4.0",
