--- a/solomon/package.json
+++ b/solomon/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "browser-sync": "^1.7.3",
     "del": "^1.1.0",
     "event-stream": "^3.1.7",
     "gulp": "^3.8.10",
@@ -25,6 +26,7 @@
     "gulp-size": "^1.1.0",
     "gulp-sourcemaps": "^1.2.8",
     "gulp-uglify": "^1.0.2",
+    "gulp-util": "^3.0.1",
     "gulp-watch": "^3.0.0",
     "gulp-wrap": "^0.5.0",
     "gulp-wrap-js": "^0.2.0",
