--- a/magic-lamp/package.json
+++ b/magic-lamp/package.json
@@ -21,6 +21,7 @@
     "getmod": "^0.1.1",
     "jade": "~1.6.0",
     "jsonwebtoken": "^1.3.0",
+    "lodash-node": "^2.4.1",
     "moment": "^2.8.4",
     "mongoose": "^3.8.20",
     "morgan": "~1.3.0",
