--- a/solomon/bower.json
+++ b/solomon/bower.json
@@ -21,9 +21,10 @@
     "bootstrap": "~3.3.1",
     "angular-socket-io": "~0.7.0",
     "angular-bootstrap": "~0.12.0",
-    "socket.io-client": "~1.2.1"
+    "socket.io-client": "~1.2.1",
+    "symbiote-ng-common": "~0.1.0-build.3"
   },
   "resolutions": {
-    "angular": "^1.2.6"
+    "angular": "~1.3.6"
   }
 }
