--- a/solomon/package.json
+++ b/solomon/package.json
@@ -26,6 +26,7 @@
     "gulp-size": "^1.1.0",
     "gulp-sourcemaps": "^1.2.8",
     "gulp-uglify": "^1.0.2",
+    "gulp-using": "0.0.1",
     "gulp-util": "^3.0.1",
     "gulp-watch": "^3.0.0",
     "gulp-wrap": "^0.5.0",
