--- a/magic-lamp/package.json
+++ b/magic-lamp/package.json
@@ -31,6 +31,7 @@
     "passport-http-bearer": "^1.0.1",
     "passport-local": "^1.0.0",
     "passport-localapikey-update": "^0.4.2",
+    "restify": "^2.8.4",
     "serve-favicon": "~2.1.3",
     "socket.io": "^1.2.1",
     "stylus": "0.42.3"
