--- a/solomon/package.json
+++ b/solomon/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "devDependencies": {
     "browser-sync": "^1.7.3",
+    "connect-history-api-fallback": "0.0.5",
     "del": "^1.1.0",
     "event-stream": "^3.1.7",
     "gulp": "^3.8.10",
@@ -19,6 +20,7 @@
     "gulp-connect": "^2.2.0",
     "gulp-htmlmin": "^0.2.0",
     "gulp-inject": "^1.0.2",
+    "gulp-jshint": "^1.9.0",
     "gulp-less": "^2.0.1",
     "gulp-livereload": "^2.1.1",
     "gulp-load-plugins": "^0.8.0",
