--- a/magic-lamp/package.json
+++ b/magic-lamp/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.5.2",
     "debug": "~2.0.0",
     "express": "~4.9.0",
+    "express-error-handler": "^1.0.1",
     "getmod": "^0.1.1",
     "jade": "~1.6.0",
     "jsonwebtoken": "^1.3.0",
