--- a/solomon/bower.json
+++ b/solomon/bower.json
@@ -22,7 +22,8 @@
     "angular-socket-io": "~0.7.0",
     "angular-bootstrap": "~0.12.0",
     "socket.io-client": "~1.2.1",
-    "symbiote-ng-common": "~0.1.0-build.3"
+    "symbiote-ng-common": "~0.1.0-build.3",
+    "font-awesome": "~4.2.0"
   },
   "resolutions": {
     "angular": "~1.3.6"
