--- a/solomon/package.json
+++ b/solomon/package.json
@@ -19,6 +19,7 @@
     "gulp-concat": "^2.4.2",
     "gulp-connect": "^2.2.0",
     "gulp-htmlmin": "^0.2.0",
+    "gulp-imagemin": "^2.1.0",
     "gulp-inject": "^1.0.2",
     "gulp-jshint": "^1.9.0",
     "gulp-less": "^2.0.1",
