--- a/solomon/bower.json
+++ b/solomon/bower.json
@@ -23,7 +23,8 @@
     "angular-bootstrap": "~0.12.0",
     "socket.io-client": "~1.2.1",
     "symbiote-ng-common": "~0.1.0-build.3",
-    "font-awesome": "~4.2.0"
+    "font-awesome": "~4.2.0",
+    "angular-animate": "~1.3.8"
   },
   "resolutions": {
     "angular": "~1.3.6"
