--- a/magic-lamp/package.json
+++ b/magic-lamp/package.json
@@ -20,12 +20,14 @@
     "express": "~4.9.0",
     "express-error-handler": "^1.0.1",
     "getmod": "^0.1.1",
+    "gridfs-stream": "^0.5.3",
     "jade": "~1.6.0",
     "jsonwebtoken": "^1.3.0",
     "lodash-node": "^2.4.1",
     "moment": "^2.8.4",
     "mongoose": "^3.8.20",
     "morgan": "~1.3.0",
+    "multer": "^0.1.6",
     "node-uuid": "^1.4.2",
     "passport": "^0.2.1",
     "passport-http": "^0.2.2",
@@ -35,6 +37,7 @@
     "restify": "^2.8.4",
     "serve-favicon": "~2.1.3",
     "socket.io": "^1.2.1",
+    "socket.io-redis": "^0.1.4",
     "stylus": "0.42.3"
   },
   "devDependencies": {
