--- a/qarin/bower.json
+++ b/qarin/bower.json
@@ -19,6 +19,7 @@
     "angular-ui-router": "^0.2.13",
     "socket.io-client": "~1.2.1",
     "angular-socket-io": "^0.6.1",
-    "bootstrap": "~3.3.1"
+    "bootstrap": "~3.3.1",
+    "symbiote-ng-common": "~0.1.0-build.12"
   }
 }
