--- a/qarin/bower.json
+++ b/qarin/bower.json
@@ -20,6 +20,7 @@
     "socket.io-client": "~1.2.1",
     "angular-socket-io": "^0.6.1",
     "bootstrap": "~3.3.1",
-    "symbiote-ng-common": "~0.1.0-build.12"
+    "symbiote-ng-common": "~0.1.0-build.12",
+    "angular-scroll": "~0.6.4"
   }
 }
