--- a/qarin/bower.json
+++ b/qarin/bower.json
@@ -21,6 +21,7 @@
     "angular-socket-io": "^0.6.1",
     "bootstrap": "~3.3.1",
     "symbiote-ng-common": "~0.1.0-build.12",
-    "angular-scroll": "~0.6.4"
+    "angular-scroll": "~0.6.4",
+    "angular-animate": "~1.3.8"
   }
 }
