--- a/qarin/package.json
+++ b/qarin/package.json
@@ -19,6 +19,7 @@
     "gulp-htmlmin": "^0.2.0",
     "gulp-if": "^1.2.5",
     "gulp-inject": "^1.0.2",
+    "gulp-jshint": "^1.9.0",
     "gulp-less": "^2.0.1",
     "gulp-livereload": "^2.1.1",
     "gulp-load-plugins": "^0.8.0",
