--- a/magic-lamp/package.json
+++ b/magic-lamp/package.json
@@ -19,6 +19,7 @@
     "debug": "~2.0.0",
     "express": "~4.9.0",
     "express-error-handler": "^1.0.1",
+    "fast-json-patch": "^0.5.0",
     "getmod": "^0.1.1",
     "gridfs-stream": "^0.5.3",
     "jade": "~1.6.0",
@@ -40,6 +41,5 @@
     "socket.io-redis": "^0.1.4",
     "stylus": "0.42.3"
   },
-  "devDependencies": {
-    }
+  "devDependencies": {}
 }
