--- a/magic-lamp/package.json
+++ b/magic-lamp/package.json
@@ -17,6 +17,7 @@
     "cookie-parser": "~1.3.3",
     "cors": "^2.5.2",
     "debug": "~2.0.0",
+    "electrolyte": "0.0.6",
     "express": "~4.9.0",
     "express-error-handler": "^1.0.1",
     "fast-json-patch": "^0.5.0",
@@ -39,7 +40,8 @@
     "serve-favicon": "~2.1.3",
     "socket.io": "^1.2.1",
     "socket.io-redis": "^0.1.4",
-    "stylus": "0.42.3"
+    "stylus": "0.42.3",
+    "useragent": "^2.1.3"
   },
   "devDependencies": {}
 }
