--- a/aladdin/bower.json
+++ b/aladdin/bower.json
@@ -24,6 +24,7 @@
     "angular-scroll": "~0.6.4",
     "angular-animate": "~1.3.8",
     "font-awesome": "~4.3.0",
-    "angular-bootstrap": "~0.12.0"
+    "angular-bootstrap": "~0.12.0",
+    "momentjs": "~2.9.0"
   }
 }
