--- a/aladdin/bower.json
+++ b/aladdin/bower.json
@@ -25,6 +25,11 @@
     "angular-animate": "~1.3.8",
     "font-awesome": "~4.3.0",
     "angular-bootstrap": "~0.12.0",
-    "momentjs": "~2.9.0"
+    "momentjs": "~2.9.0",
+    "moment-duration-format": "~1.3.0",
+    "angular-scroll-glue": "~2.0.3"
+  },
+  "resolutions": {
+    "angular": "1.3.11"
   }
 }
