--- a/magic-lamp/package.json
+++ b/magic-lamp/package.json
@@ -25,6 +25,7 @@
     "gridfs-stream": "^0.5.3",
     "jade": "~1.6.0",
     "jsonwebtoken": "^1.3.0",
+    "lodash": "^3.0.1",
     "lodash-node": "^2.4.1",
     "moment": "^2.8.4",
     "mongoose": "^3.8.20",
