--- a/solomon/bower.json
+++ b/solomon/bower.json
@@ -24,7 +24,9 @@
     "socket.io-client": "~1.2.1",
     "symbiote-ng-common": "~0.1.0-build.3",
     "font-awesome": "~4.2.0",
-    "angular-animate": "~1.3.8"
+    "angular-animate": "~1.3.8",
+    "moment": "~2.9.0",
+    "lodash": "~3.0.1"
   },
   "resolutions": {
     "angular": "~1.3.6"
