--- a/magic-lamp/package.json
+++ b/magic-lamp/package.json
@@ -28,7 +28,7 @@
     "lodash": "^3.0.1",
     "lodash-node": "^2.4.1",
     "moment": "^2.8.4",
-    "mongoose": "^3.8.20",
+    "mongoose": "3.8.23",
     "morgan": "~1.3.0",
     "multer": "^0.1.7",
     "node-uuid": "^1.4.2",
