--- a/magic-lamp/package.json
+++ b/magic-lamp/package.json
@@ -23,6 +23,7 @@
     "fast-json-patch": "^0.5.0",
     "getmod": "^0.1.1",
     "gridfs-stream": "^0.5.3",
+    "ipware": "0.0.3",
     "jade": "~1.6.0",
     "jsonwebtoken": "^1.3.0",
     "lodash": "^3.0.1",
@@ -40,6 +41,7 @@
     "restify": "^2.8.4",
     "serve-favicon": "~2.1.3",
     "socket.io": "^1.2.1",
+    "socket.io-adapter": "^0.3.1",
     "socket.io-redis": "^0.1.4",
     "stylus": "0.42.3",
     "useragent": "^2.1.3"
