--- a/magic-lamp/package.json
+++ b/magic-lamp/package.json
@@ -11,23 +11,24 @@
     "email": "xiotox@gmail.com"
   },
   "dependencies": {
+    "babel": "^4.4.2",
+    "babel-runtime": "^4.4.2",
     "bluebird": "^2.3.11",
     "body-parser": "~1.8.1",
     "compression": "^1.2.2",
     "cookie-parser": "~1.3.3",
     "cors": "^2.5.2",
-    "debug": "~2.0.0",
+    "debug": "^2.1.1",
     "electrolyte": "0.0.6",
-    "express": "~4.9.0",
     "express-error-handler": "^1.0.1",
     "fast-json-patch": "^0.5.0",
-    "getmod": "^0.1.1",
+    "getmod": "^1.0.1",
     "gridfs-stream": "^0.5.3",
     "ipware": "0.0.3",
     "jade": "~1.6.0",
     "jsonwebtoken": "^1.3.0",
     "lodash": "^3.0.1",
-    "lodash-node": "^2.4.1",
+    "lodash-node": "^3.3.0",
     "moment": "^2.8.4",
     "mongoose": "3.8.23",
     "morgan": "~1.3.0",
