--- a/qarin/bower.json
+++ b/qarin/bower.json
@@ -22,6 +22,7 @@
     "bootstrap": "~3.3.1",
     "symbiote-ng-common": "~0.1.0-build.12",
     "angular-scroll": "~0.6.4",
-    "angular-animate": "~1.3.8"
+    "angular-animate": "~1.3.8",
+    "angular-bootstrap": "~0.12.1"
   }
 }
