--- a/solomon/bower.json
+++ b/solomon/bower.json
@@ -26,7 +26,8 @@
     "font-awesome": "~4.2.0",
     "angular-animate": "~1.3.8",
     "moment": "~2.9.0",
-    "lodash": "~3.0.1"
+    "lodash": "~3.0.1",
+    "angular-google-chart": "~0.0.11"
   },
   "resolutions": {
     "angular": "~1.3.6"
