--- a/solomon/bower.json
+++ b/solomon/bower.json
@@ -27,7 +27,8 @@
     "angular-animate": "~1.3.8",
     "moment": "~2.9.0",
     "lodash": "~3.0.1",
-    "angular-google-chart": "~0.0.11"
+    "angular-google-chart": "~0.0.11",
+    "angular-charts": "~0.2.7"
   },
   "resolutions": {
     "angular": "~1.3.6"
