--- a/solomon/bower.json
+++ b/solomon/bower.json
@@ -28,7 +28,9 @@
     "moment": "~2.9.0",
     "lodash": "~3.0.1",
     "angular-google-chart": "~0.0.11",
-    "angular-charts": "~0.2.7"
+    "angular-charts": "~0.2.7",
+    "angular-flot": "~0.0.6",
+    "moment-duration-format": "~1.3.0"
   },
   "resolutions": {
     "angular": "~1.3.6"
