--- a/magic-lamp/package.json
+++ b/magic-lamp/package.json
@@ -30,6 +30,7 @@
     "lodash": "^3.0.1",
     "lodash-node": "^3.3.0",
     "moment": "^2.8.4",
+    "moment-duration-format": "^1.3.0",
     "mongoose": "3.8.23",
     "morgan": "~1.3.0",
     "multer": "^0.1.7",
@@ -47,5 +48,7 @@
     "stylus": "0.42.3",
     "useragent": "^2.1.3"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "node-inspector": "^0.9.1"
+  }
 }
