--- a/solomon/bower.json
+++ b/solomon/bower.json
@@ -30,7 +30,10 @@
     "angular-google-chart": "~0.0.11",
     "angular-charts": "~0.2.7",
     "angular-flot": "~0.0.6",
-    "moment-duration-format": "~1.3.0"
+    "moment-duration-format": "~1.3.0",
+    "flot": "~0.8.3",
+    "flot.tooltip": "~0.8.4",
+    "flot.orderBars": "./lib/jquery.flot.orderBars"
   },
   "resolutions": {
     "angular": "~1.3.6"
